# test_celery_rabbitmq

./: celery_app.py  docker-compose.yaml  pyproject.toml  run_tasks.py
docker/flower/: Dockerfile
