[tool.poetry]
name = "fib-rab-cel"
version = "0.1.0"
description = ""
authors = ["Eric <gizyatullov0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
celery = "^5.2.7"
flower = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
